# Neural-network-with-numpy

./: License.md  README.md  pyproject.toml  tasks.py
documentation/: implementation.md  specification.md  testdocumentation.md  weeklyrecap.md  weeklyrecap1.md  weeklyrecap2.md  weeklyrecap3.md  weeklyrecap4.md  weeklyrecap5.md  weeklyrecap6.md
src/data/: idx_to_csv.py
src/model/: cli.py  dataformat.py  gui.py  main.py  model.pickle  model98.pickle  utility.py
src/tests/: activationfunc_test.py  dataconvert_test.py  forwardprop_test.py  init_nn_test.py  nn_sup_test.py
