[tool.poetry]
name = "tiralab"
version = "0.1.0"
description = ""
authors = ["saavajuu <juuso.saavalainen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
